--- a/style.css
+++ b/style.css
@@ -1,23 +1,23 @@
-{
-	 padding: 0;
-	 margin: 0;
+*{
+	padding: 0;
+	margin: 0;
 }
 .portfolio-sections{
 	height: 400px;
 	width: 100%;
 	border: 2px solid black;
 	text-align: center;
-	background: colorl:white;
+	background-color: white;
 }
 .navigation-bar{
 	position: fixed;
 	width: 100%;
-	background: color:transparent;
+	background-color: transparent;
 	backdrop-filter: blur(10px);
 }
-.portfolio-sections h1{
+.portfolio-sections-sections h1{
 	margin-top: 50px;
 }
 html{
-	scroll-behavior: smooth;
+scroll-behavior: smooth;
 }
