--- a/style.css
+++ b/style.css
@@ -1,23 +1,176 @@
 *{
-	padding: 0;
-	margin: 0;
+    padding: 0;
+    margin: 0;
 }
 .portfolio-sections{
-	height: 400px;
-	width: 100%;
-	border: 2px solid black;
-	text-align: center;
-	background-color: white;
+    height: 400px;
+    width: 100%;
+    border: 2px solid black;
+   
+    background-color: floralwhite;
 }
 .navigation-bar{
-	position: fixed;
-	width: 100%;
-	background-color: transparent;
-	backdrop-filter: blur(10px);
+    position: fixed;
+    top: 0px;
+    width: 100%;
+    background-color: blueviolet;
+    backdrop-filter: blur(10px);
+    z-index: 1;
+    
 }
-.portfolio-sections-sections h1{
-	margin-top: 50px;
+.portfolio-sections h1{
+    margin-top: 50px;
 }
 html{
-scroll-behavior: smooth;
+    scroll-behavior: smooth;
+}
+.main-container{
+    position: relative;
+    top:50px;
+}
+.brand{
+    font-size: 30px;
+    font-family: Arial Black;
+    font-variant: small-caps;
+    color: magenta;
+}
+.navmenu{
+    color: black;
+    font-size: 20px;
+    font-family: sans-serif;
+    font-weight: bolder;
+    padding-left: 15px;
+}
+.navmenu:hover{
+    text-decoration: underline 2px solid black;
+    text-underline-offset: 6px;
+    
+}
+.tracking-in-expand {
+	-webkit-animation: tracking-in-expand 2s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+	        animation: tracking-in-expand 2s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+}
+ @-webkit-keyframes tracking-in-expand {
+    0% {
+      letter-spacing: -0.5em;
+      opacity: 0;
+    }
+    40% {
+      opacity: 0.6;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+  @keyframes tracking-in-expand {
+    0% {
+      letter-spacing: -0.5em;
+      opacity: 0;
+    }
+    40% {
+      opacity: 0.6;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+#home{
+   height: 370px;
+   background-image: url("https://cdn.dribbble.com/users/1187836/screenshots/6539429/programer.gif");
+   background-repeat: no-repeat;
+   background-size:45%;
+   background-position:90% 20%;
+   border: none;
+}
+
+#home-info{
+    position: absolute;
+    top: 20px;
+    width: 400px;
+    height: 250px;
+    font-size: 25px;
+    margin-top: 50px;
+    margin-left: 50px;
+}
+.info{
+    font-weight: bolder;
+    color: lightslategray;
+}
+.designation{
+    color: royalblue;
+    font-size: 25px;
+    font-weight: bolder;
+}
+.myname{
+    font-size: 35px;
+}
+.rsmbtn{
+    height: 40px;
+    width: 100px;
+    border: none;
+    margin-top: 20px;
+    border-radius: 10px;
+    font-size:15px;
+    font-weight: bolder;
+    background-color: royalblue;
+    color: white;
+    transition-duration: 1s;
+}
+.rsmbtn:hover{
+    background-color: white;
+    color: royalblue;
+    border: 3px solid royalblue;
+   
+    transform: scale(1.1);
+}
+
+.about-section{
+    height: 500px;
+    width: 100%;
+    background-color: white;
+}
+.aboutmain{
+    height: 500px;
+    width: 100%;
+    display: flex;
+    font-size: 25px;
+    font-family: sans-serif;
+    font-weight: bolder;
+
+}
+.aboutmain div{
+    height: 500px;
+    width: 50%;
+
+}
+.minion{
+    margin-top: 100px;
+    margin-left: 90px;
+    animation-duration: 4s;
+    animation-name: zoom;
+    animation-iteration-count: 1;
+}
+@keyframes zoom{
+    100%{
+        transform: scale(1.2);
+        border-radius: 60px;
+
+    }
+}
+.heading{
+    font-family: Arial Black;
+    text-align: center;
+    margin: 30px 0px;
+    font-size: 40px;
+    color: royalblue;
+}
+.carrerobj{
+    padding: 30px;
+}
+.carrerinfo{
+    text-align: justify;
+    line-height: 40px;
+    text-indent: 100px;
+    word-break: 7px;
+    letter-spacing: 1px;
 }
